movement working, must bind to keys

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		    {{#map}}
 		        <tr> 
 		        	{{#this}}
-		            	<td class="tile" id='location-{{columnCounter}}-{{rowCounter}}'>{{this}}</td> 
+		            	<td class="tile" id='location-{{rowCounter}}-{{columnCounter}}'>.</td> 
 		            {{/this}}
 		        </tr> 
 	        {{/map}}
