--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <meta charset="utf-8">
   <title>Untitled</title>
   <link rel="stylesheet" type="text/css" href="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.1.1/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="http://summer2014-refactoru-students.herokuapp.com/public/fontello/css/fontello.css">
+  <!-- <link rel="stylesheet" type="text/css" href="http://summer2014-refactoru-students.herokuapp.com/public/fontello/css/fontello.css"> -->
   <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-	<div id="main-wrapper" class="container-fluid">
-		<div class="row">
+	<div id="main-wrapper">
+		<div>
 
-			<div id="game-window" class="col-md-12">
+			<div id="game-window">
 				<!-- jQuery appends here -->
 			</div>
 		</div>
@@ -29,9 +29,11 @@
 		<table>
 			<tbody> 
 		    {{#map}}
-		        <tr class='row'> 
+		        <tr> 
 		        	{{#this}}
-	            	<td class="tile" id='column-{{columnCounter}}-row-{{rowCounter}}'>.</td> 
+	            	<td>
+	            		<div class="tile {{class}}" id='column-{{columnCounter}}-row-{{rowCounter}}'>{{text}}</div>
+            		</td> 
 		            {{/this}}
 		        </tr> 
 	        {{/map}}
