--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 <head>
   <meta charset="utf-8">
   <title>Untitled</title>
-  <link rel="stylesheet" type="text/css" href="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.1.1/css/bootstrap.min.css">
+  <!-- <link rel="stylesheet" type="text/css" href="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.1.1/css/bootstrap.min.css"> -->
   <!-- <link rel="stylesheet" type="text/css" href="http://summer2014-refactoru-students.herokuapp.com/public/fontello/css/fontello.css"> -->
+  <link rel="stylesheet" type="text/css" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css">
   <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
 	<div id="main-wrapper">
+	<div id="messages"></div>
 		<div>
 
 			<div id="game-window">
 				<!-- jQuery appends here -->
 			</div>
 		</div>
-	</div>
-	<div class="messages">
 	</div>
 
 
@@ -26,7 +26,7 @@
 	<script src="main.js"></script>
 
 	<script id="game-window-template" type="text/x-handlebars-template">
-		<table>
+		<table id="game-table">
 			<tbody> 
 		    {{#map}}
 		        <tr> 
