pathfinding implemented, no monster movement yet.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.6.0/underscore-min.js"></script>
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 	<script src= "//cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0-alpha.4/handlebars.js"></script>
+	<script type="text/javascript" src="pathfinding-browser.min.js"></script>
 	<script src="main.js"></script>
 
 	<script id="game-window-template" type="text/x-handlebars-template">
