refactored all combat into new Actor class. Made character & monsters subclasses of actor class.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 	<div id="main-wrapper">
 	<div id="messages"></div>
 		<div>
-
+			
+			<div id="HUD">HP: 100</div>
 			<div id="game-window">
 			<!-- <div class='tile'>something</div> -->
 				<!-- jQuery appends here -->
